Restart command icon change.

--- a/NetworkVisualizer/Code/MVVM/Views/Pages/SimulationPage.xaml
+++ b/NetworkVisualizer/Code/MVVM/Views/Pages/SimulationPage.xaml
@@ -67,7 +67,7 @@
                 </MenuItem>
                 <MenuItem Header="Restart" Command="{Binding MenuCommand}" CommandParameter="{x:Static viewmodels:SimulationMenuCommand.Restart}">
                     <MenuItem.Icon>
-                        <ui:SymbolIcon Symbol="ArrowReset24"/>
+                        <ui:SymbolIcon Symbol="ArrowClockwise24"/>
                     </MenuItem.Icon>
                 </MenuItem>
                 <MenuItem Header="Reset" Command="{Binding MenuCommand}" CommandParameter="{x:Static viewmodels:SimulationMenuCommand.Reset}">
